# tracebot

./: .gitignore  README.md  auto_image_nikon_jobs.py  environment.yml  mw_pump_functions.py  mw_pump_gui.py  pyproject.toml  shell.nix  status.json  ~$acebot_manual.docx
configs/: robot_config_KSB023.yaml  robot_config_template.yaml
environment_definitions/: env-linuxlike.yml  env-windows.yml
environments/: env-windows.yml
